# llvm

clang/include/clang/Driver/: ToolChain.h
clang/lib/Driver/: Driver.cpp  OffloadBundler.cpp
clang/lib/Driver/ToolChains/: RISCVToolchain.cpp
clang/lib/Frontend/: CompilerInvocation.cpp
clang/tools/clang-linker-wrapper/: ClangLinkerWrapper.cpp
dogfood/: README  dogfood.sh
llvm/include/llvm/IR/: IntrinsicsRISCV.td
openmp/libomptarget/plugins-nextgen/: CMakeLists.txt
openmp/libomptarget/plugins-nextgen/vortex/: CMakeLists.txt
openmp/libomptarget/plugins-nextgen/vortex/dynamic_vortex/: vortex.cpp  vortex.h
openmp/libomptarget/plugins-nextgen/vortex/src/: rtl.cpp
openmp/libomptarget/src/: CMakeLists.txt
